Issue #1132 - Add scrollbar styles in leader modal

--- a/assets/scss/organisms/modals/_leader-modal.scss
+++ b/assets/scss/organisms/modals/_leader-modal.scss
@@ -18,11 +18,24 @@
         }
 
         .content-wrapper {
-            overflow: auto;
+            overflow-y: auto;
             padding: 86px 99px 131px;
 
             @include breakpoint(small only) {
-                padding: 0 0  62px;
+                padding: 0;
+                margin-bottom: 32px;
+            }
+
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: linear-gradient(90deg, transparent 10%, $black 33%, transparent 0%);
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: black;
             }
         }
 
